--- a/Homework_13_bank_system/View/AdminPanel.xaml
+++ b/Homework_13_bank_system/View/AdminPanel.xaml
@@ -6,7 +6,6 @@
              xmlns:local="clr-namespace:Homework_13_bank_system.View"
              xmlns:viewModel="clr-namespace:Homework_13_bank_system.ViewModels"
              mc:Ignorable="d" 
-             d:DesignHeight="450" d:DesignWidth="800"
              >
     <UserControl.DataContext>
         <viewModel:AdminPanelVM/>
@@ -15,15 +14,20 @@
         <Button 
             Background="WhiteSmoke"
             Command="{Binding CreateUser}"
-            IsEnabled="{Binding CreateUserBtnActivity}"
+            IsEnabled="{
+            Binding CreateUserBtnActivity, 
+            UpdateSourceTrigger=PropertyChanged, 
+            Mode=OneWay}"
                 x:Name="createUserBtn"
                 Content="Создать пользователя"
                 Width="160"
                 Height="30"/>
         <Button 
             Background="WhiteSmoke"
-            Command="{Binding CreateUser}"
-            IsEnabled="{Binding CreateUserBtnActivity}"
+            Command="{Binding EditPermissions}"
+            IsEnabled="{Binding HaveEditRights, 
+            UpdateSourceTrigger=PropertyChanged,
+            Mode=OneWay}"
                 x:Name="changeUsersPermissions"
                 Content="Управление правами"
                 Margin="0,10,0,0"
